<resources>
    <string name="app_name">Segunda Actividad</string>

    <string name="hello_world">Segunda Actividad</string>
    <string name="action_settings">Settings</string>
    <string name="boton1">Java</string>
    <string name="contenido1">Es un lenguaje de programación de propósito general,
        concurrente, orientado a objetos que fue diseñado específicamente para tener
        tan pocas dependencias de implementación como fuera posible. Su intención es
        permitir que los desarrolladores de aplicaciones escriban el programa una vez
        y lo ejecuten en cualquier dispositivo.</string>

    <string name="boton2">Phyton</string>
    <string name="contenido2">Es un lenguaje de programación interpretado cuya filosofía
    hace hincapié en una sintaxis que favorezca un código legible.Se trata de un lenguaje
    de programación multiparadigma, ya que soporta orientación a objetos, programación imperativa
    y, en menor medida, programación funcional. </string>


    <string name="boton3">C++</string>
    <string name="contenido3"> La intención de su creación fue el extender al lenguaje de
        programación C mecanismos que permiten la manipulación de objetos. En ese sentido,
        desde el punto de vista de los lenguajes orientados a objetos, el C++ es un lenguaje
        híbrido.</string>

    <string name="boton4">JavaScript</string>
    <string name="contenido4"> es un lenguaje de programación interpretado, dialecto del estándar
        ECMAScript. Se define como orientado a objetos,3 basado en prototipos, imperativo,
        débilmente tipado y dinámico.</string>


    <string name="seleccion">Escoje un lenguaje</string>


    <string name="regresar">regresar</string>


</resources>
