<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ff000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:src="@drawable/fond1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion"
        android:id="@+id/textView2"
        android:layout_marginTop="0dp"
        android:textColor="#ffffffff"
        android:textStyle="italic"
        android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton1"
        android:id="@+id/button01"
        android:background="#ff000000"
        android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton2"
        android:id="@+id/button02"
        android:background="#ff000000"
        android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton3"
        android:id="@+id/button03"
        android:background="#ff000000"
        android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton4"
        android:id="@+id/button04"
        android:background="#ff000000"
        android:textColor="#ffffffff" />



    </LinearLayout>

</RelativeLayout>
