<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:src="@drawable/fond1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton1"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:textSize="32dp"
        android:gravity="center" />

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/imageView2"
        android:src="@drawable/javalogo"
        android:scaleType="centerInside"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido1"
        android:id="@+id/textView4"

        android:textColor="#ffffffff"
        android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresar"
        android:id="@+id/botonRegresar1"
        android:gravity="center"
                 />
    </LinearLayout>

</RelativeLayout>
